--- a/coursework/CSC8018_Ocean_project_Website/Ocean_Cleanup/ocean_cleanup.css
+++ b/coursework/CSC8018_Ocean_project_Website/Ocean_Cleanup/ocean_cleanup.css
@@ -1,13 +1,255 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Darker+Grotesque&family=EB+Garamond&family=Special+Elite&display=swap');
 
-
 * {
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
-    font-family: 'Darker Grotesque', sans-serif;
     font-family: 'EB Garamond', serif;
-    font-family: 'Special Elite', cursive;
-    color: white;
+    font-size: 16pt;
+    color: black;
 }
+
+.header_container {
+    max-width: 100vw;
+    height: 15.2em;
+    background-image: url('/images/ocean.jpg');
+    background-size: cover;
+    background-position: center bottom;
+    margin: auto;
+}
+
+.title_container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    height: 12.85em;
+}
+
+h1 span {
+    font-family: 'Darker Grotesque', sans-serif;
+    font-size: 75pt;
+    text-align: center;
+    color: whitesmoke;
+    text-shadow: 4px 4px 4px #000000c2;
+}
+
+.h1_span_1 {
+    float: left;
+    display:inline-flex ;
+    font-size: 30pt;
+    padding-top: 0.8em;
+    font-weight: 200;
+    padding-right: 0.35em;
+}
+
+.h1_span_2 {
+    font-weight: 400;
+}
+
+.h1_span_3 {
+    font-weight: bolder;
+}
+
+h2 {
+    font-family: 'Special Elite', sans-serif;
+    font-size: 28pt;
+    margin: 2rem 0 2rem 0;
+}
+
+h3 {
+    font-family: 'Special Elite', sans-serif;
+    font-size: 20pt;
+    margin: 2rem 0 2rem 0;
+}
+
+navbar {
+    display: flex;
+    justify-content: space-around;
+    align-items:center;
+    position: relative;
+    min-height: 8vh;
+    background: rgba(0, 0, 0, 0.35);
+    width: 100%;
+}
+
+.nav_list {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    margin-left: 24%;
+    margin-right: 24%;
+}
+.nav_list li {
+    list-style: none;
+}
+.nav_link {
+    text-decoration: none;
+    letter-spacing: 2px;
+    font-weight: 800;
+    font-size: 20px;
+    color: whitesmoke;
+    font-family: 'Darker Grotesque';
+}
+
+.tech_list {
+    display: none;
+    overflow: hidden;
+}
+
+div {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+
+.table_container {
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+    border-bottom: 2px solid;
+    border-top: 2px solid;
+    margin: 2rem auto 2rem auto;
+}
+
+.table_container div {
+    margin: 0;
+}
+
+.table_title {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-bottom: 2px solid;
+    font-weight: 600;
+}
+
+.table_row {
+    display: flex;
+    border-bottom: 1px solid;
+}
+
+.table_column_1 {
+    width: 30%;
+    flex-wrap: nowrap;
+    font-size: 1.5vw;
+}
+
+.table_column_2 {
+    width: 70%;
+    flex-wrap: nowrap;
+    font-size: 1.5vw;
+}
+
+.video {
+    width: 100%;
+    width: 100%;
+}
+
+.polaroid_container_1 {
+    width: 50%;
+    float: left;
+    transform: rotate(-2deg);
+    margin: 0 1rem 1rem 0;
+    margin-right: 1rem;
+    display: flex;
+}
+
+.polaroid_container_2 {
+    width: 35%;
+    float: right;
+    transform: rotate(3deg);
+    margin: 1rem 0 1rem 1rem;
+    display: flex;
+}
+
+.polaroid_container_3 {
+    width: 50%;
+    float: left;
+    transform: rotate(-2deg);
+    margin: 1rem 1rem 1rem 0;
+    display: flex;
+}
+
+.polaroid_container_4 {
+    width: 40%;
+    float: right;
+    margin: 1rem;
+    transform: rotate(3deg);
+}
+
+.polaroid {
+    background: #f3f3f3;
+    padding: 0.4rem;
+    padding-bottom: 0.2rem;
+    box-shadow: 0.3rem 0.3rem 10px 3px #0000002d;
+    margin: 0;
+    border-style: solid;
+    border-color: #00000031;
+    border-width: 1px;
+    border-radius: 2px;
+}
+
+.polaroid img {
+    max-width: 100%;
+    height: auto;
+}
+
+.caption_container {
+   position: relative;
+   min-height: 1.5rem;
+   height: auto;
+   margin: 0;
+}
+
+.polaroid_caption {
+    font-family: 'Special Elite', sans-serif;
+    font-size: 1vw;
+    color: #00000083;
+    margin: 0;
+    padding-top: 0.5rem;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    text-align: right;
+}
+
+.quote {
+    font-size: 28pt;
+    text-align: center;
+    color: #019ca0;
+}
+
+  .main_text {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    padding: 30px, 0px, 0px, 0px;
+  }
+
+  .main_block {
+    width: 45%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  footer {
+        max-width: 100vw;
+        height: 7rem;
+        background-image: url('/images/ocean.jpg');
+        background-size: cover;
+        background-position: center bottom;
+        margin: auto;
+        display: flex;
+        justify-content: center;
+  }
+
+  .footer_text {
+    display: flex;
+    align-items: center;
+    font-family: 'Darker Grotesque', sans-serif;
+    font-weight: 600;
+  }
