--- a/coursework/CSC8018_Ocean_project_Website/Ocean_Cleanup/ocean_cleanup.css
+++ b/coursework/CSC8018_Ocean_project_Website/Ocean_Cleanup/ocean_cleanup.css
@@ -1,7 +1,10 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Darker+Grotesque&family=EB+Garamond&family=Special+Elite&display=swap');
 
-* {
+
+
+body {
+    position: relative;
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
@@ -12,11 +15,13 @@
 
 .header_container {
     max-width: 100vw;
-    height: 15.2em;
-    background-image: url('/images/ocean.jpg');
+    height: 23vw;
+    background-image: url('http://homepages.cs.ncl.ac.uk/harold.fellermann/csc8018/ocean_cleanup/resources/ocean.jpg');
     background-size: cover;
     background-position: center bottom;
-    margin: auto;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 3em;
 }
 
 .title_container {
@@ -29,19 +34,20 @@
 
 h1 span {
     font-family: 'Darker Grotesque', sans-serif;
-    font-size: 75pt;
+    font-size: 8vw;
     text-align: center;
     color: whitesmoke;
-    text-shadow: 4px 4px 4px #000000c2;
+    text-shadow: 4px 4px 4px #0000007e;
 }
 
 .h1_span_1 {
     float: left;
     display:inline-flex ;
-    font-size: 30pt;
-    padding-top: 0.8em;
+    font-size: 40pt;
+    padding-top: 3rem;
     font-weight: 200;
-    padding-right: 0.35em;
+    padding-right: 0.3em;
+    text-shadow: 0px 1px 5px #0000007e;
 }
 
 .h1_span_2 {
@@ -50,18 +56,20 @@ h1 span {
 
 .h1_span_3 {
     font-weight: bolder;
+    padding: 4px;
+    letter-spacing: 4px;
 }
 
-h2 {
+.h2_titles {
     font-family: 'Special Elite', sans-serif;
     font-size: 28pt;
-    margin: 2rem 0 2rem 0;
+    margin: 2.5rem 0 1.5rem 0;
 }
 
-h3 {
+.h3_titles {
     font-family: 'Special Elite', sans-serif;
     font-size: 20pt;
-    margin: 2rem 0 2rem 0;
+    margin: 3rem 0 2rem 0;
 }
 
 navbar {
@@ -69,17 +77,16 @@ navbar {
     justify-content: space-around;
     align-items:center;
     position: relative;
-    min-height: 8vh;
+    max-height: 5vh;
     background: rgba(0, 0, 0, 0.35);
-    width: 100%;
+    min-width: 60%;
 }
 
 .nav_list {
     display: flex;
     justify-content: space-around;
-    width: 100%;
-    margin-left: 24%;
-    margin-right: 24%;
+    align-items: center;
+    min-width: 60%
 }
 .nav_list li {
     list-style: none;
@@ -88,9 +95,26 @@ navbar {
     text-decoration: none;
     letter-spacing: 2px;
     font-weight: 800;
-    font-size: 20px;
+    font-size: 22px;
     color: whitesmoke;
     font-family: 'Darker Grotesque';
+}
+
+.nav_item {
+    padding: 1.1rem 4rem 1.2rem 4rem;
+}
+
+.nav_list li:hover {
+    background-color: #cce5e5;
+}
+
+.nav_list li:hover .nav_link {
+        color: #008c9d;
+}
+
+.nav_list li:hover .nav_link .tech_list {
+    display: none;
+    overflow: hidden;
 }
 
 .tech_list {
@@ -107,10 +131,11 @@ div {
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    width: 80%;
+    width: 75%;
     border-bottom: 2px solid;
     border-top: 2px solid;
-    margin: 2rem auto 2rem auto;
+    margin: 1.5rem auto 3rem auto;
+    font-size: 1.1vw;
 }
 
 .table_container div {
@@ -128,23 +153,38 @@ div {
 .table_row {
     display: flex;
     border-bottom: 1px solid;
+    height: 2rem;
+    display: flex;
 }
 
 .table_column_1 {
-    width: 30%;
-    flex-wrap: nowrap;
-    font-size: 1.5vw;
+    width: 25%;
+    display: flex;
+    align-items: center;
 }
 
 .table_column_2 {
-    width: 70%;
-    flex-wrap: nowrap;
-    font-size: 1.5vw;
+    width: 75%;
+    display: flex;
+    align-items: center;
+
+}
+
+.video_container {
+    width: 100%;
+    padding-top: 56.25%;
+    height: 0px;
+    position: relative;
+    margin-top: 2rem;
 }
 
 .video {
     width: 100%;
-    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin: 3em, 0, 3em, 0;
 }
 
 .polaroid_container_1 {
@@ -181,7 +221,7 @@ div {
 
 .polaroid {
     background: #f3f3f3;
-    padding: 0.4rem;
+    padding: 0.5rem;
     padding-bottom: 0.2rem;
     box-shadow: 0.3rem 0.3rem 10px 3px #0000002d;
     margin: 0;
@@ -198,8 +238,7 @@ div {
 
 .caption_container {
    position: relative;
-   min-height: 1.5rem;
-   height: auto;
+   min-height: 2.7rem;
    margin: 0;
 }
 
@@ -208,7 +247,7 @@ div {
     font-size: 1vw;
     color: #00000083;
     margin: 0;
-    padding-top: 0.5rem;
+    padding-top: 1rem;
     position: absolute;
     bottom: 0;
     right: 0;
@@ -225,26 +264,94 @@ div {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-    padding: 30px, 0px, 0px, 0px;
   }
 
   .main_block {
-    width: 45%;
+    width: 44%;
     margin-left: auto;
     margin-right: auto;
   }
 
+  .calculator {
+    width: 20%;
+    position:absolute;
+    right: 4%;
+    bottom: 12rem;
+    background-color: rgba(255,246,198,255);
+    padding: 0.5rem;
+    border-radius: 0.7vw;
+    border: 1px solid #d9ce92;
+    box-shadow: 0.3rem 0.3rem 8px 10px #00000025;
+  }
+
+  .calculator div {
+    margin: 0.2rem;
+  }
+
+  .h2_calc_titles {
+    font-family: 'Special Elite', sans-serif;
+    margin: 0.5rem 0.5rem 1.5rem 0.5rem;
+    font-size: 28pt;
+  }
+
+  .h3_calc_titles {
+    font-family: 'Special Elite', sans-serif;
+    font-size: 20pt;
+    margin: 1rem 0.5rem 1rem 0.5rem;
+  }
+
+  .calc_rows {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .row_1 {
+    min-width: 50%;
+  }
+
+  .row_2 {
+    max-width: 30%;
+    height: 1.2rem;
+    margin-left: 0.5rem;
+  }
+
+  .dropdown {
+    min-width: 15%;
+    height: 1.2rem;
+    
+  }
+
+  .dropdown_text {
+    min-width: 75%
+  }
+
+  .calc_button {
+    display: flex;
+    height: 2rem;
+    position: relative;
+  }
+
+  #reset_button {
+    width: 45%;
+    position: absolute;
+    right: 0;
+    background-color: #fff3b3;
+    border: 3px solid #d9ce92;
+    border-radius: 5px;
+    height: 2rem;
+    font-size: 12pt;
+  }
+
   footer {
-        max-width: 100vw;
-        height: 7rem;
-        background-image: url('/images/ocean.jpg');
-        background-size: cover;
-        background-position: center bottom;
-        margin: auto;
-        display: flex;
-        justify-content: center;
+    max-width: 100vw;
+    height: 9rem;
+    background-image: url('http://homepages.cs.ncl.ac.uk/harold.fellermann/csc8018/ocean_cleanup/resources/ocean.jpg');
+    background-size: cover;
+    background-position: center bottom;
+    display: flex;
+    justify-content: center;
+    margin-top: 3rem;
   }
 
   .footer_text {
@@ -252,4 +359,159 @@ div {
     align-items: center;
     font-family: 'Darker Grotesque', sans-serif;
     font-weight: 600;
+  }
+
+  .footer_span {
+    margin:3pt;
+    text-decoration: underline;
+    font-family: 'Darker Grotesque', 'sans-serif';
+  }
+
+  @media screen and (max-width: 1240px) {
+        .h1_span_1 {
+            font-size: 3vw;
+            padding-top: 2rem;
+        }
+        .title_container {
+            height: 18vh;
+        }
+        .footer_text {
+            font-size: 3vw;
+        }
+        .nav_list {
+            position: absolute;
+            top: 0rem;
+            min-width: 100vw;
+            height: 3vh;
+        }
+
+        .header_container {
+            height: 43vh;
+            min-width: 100vw;
+        }
+
+        .nav_item {
+            height: 6vh;
+            margin: 1rem;
+            padding: 0;
+        }
+
+        .main_block {
+            width: 50%;
+        }
+
+        .table_container {
+            width: 75%;
+        }
+
+        .polaroid_container_1 {
+            min-width: 60%;
+        }
+         .polaroid_container_2{
+            min-width: 60%;
+        }
+        .polaroid_container_3 {
+            min-width: 60%;
+        }
+        .polaroid_container_4 {
+            min-width: 60%;
+        }
+
+        .nav_list li:hover {
+            background-color: #cce5e500;
+        }
+
+        .calculator {
+            position: absolute;
+            right: 5%;
+
+        }
+
+        .calculator div {
+            font-size: 2vw;
+        }
+
+        .h2_calc_titles {
+            font-size: 3vw;
+        }
+        .polaroid_caption {
+            font-size: 1.5vw;
+        }
+        .table_row {
+            font-size: 1.6vw;
+        }
+        .table_title {
+            font-size: 1.6vw;
+        }
+
+        navbar {
+            background: rgba(0, 0, 0, 0.35);
+            max-height: 6vh;
+            min-height: 6vh;
+        }
+
+        .nav_list li:hover .nav_link {
+            color: whitesmoke;
+    }
+  }
+
+  @media screen and (max-width: 768px) {
+        body {
+            overflow-x: hidden;
+        }
+        .h1_span_1 {
+            padding-top: 1rem;
+        }
+
+        h1 span {
+            font-size: 10vw;
+        }
+
+        navbar {
+            background: rgba(0, 0, 0, 0.35);
+            max-height: 30vh;
+            min-height: 24vh;
+        }
+
+        .main_block {
+            width: 90%;
+            margin: auto;
+        }
+        .nav_list {
+            position: relative;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .calculator {
+            display: inline-block;
+            position: unset;
+            width: 85%;
+            margin: auto;
+        }
+
+        .calculator div {
+            font-size: 4vw;
+        }
+        
+        .polaroid_container_1 {
+            min-width: 90%;
+        }
+         .polaroid_container_2{
+            min-width: 90%;
+        }
+        .polaroid_container_3 {
+            min-width: 90%;
+        }
+        .polaroid_container_4 {
+            min-width: 90%;
+        }
+
+        .table_row {
+            font-size: 3vw;
+        }
+        .table_title {
+            font-size: 5vw;
+        }
   }
